--- a/safproject/.classpath
+++ b/safproject/.classpath
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk-11.0.15.1">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
-	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="D:/aigb_0900_kjy/jsp/resource/lib/mybatis-3.5.9.jar"/>
-	<classpathentry kind="lib" path="D:/aigb_0900_kjy/jsp/resource/lib/mysql-connector-java-8.0.27.jar"/>
-	<classpathentry kind="lib" path="D:/aigb_0900_kjy/jsp/resource/json-simple-1.1.jar/json-simple-1.1.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry exported="true" kind="lib" path="C:/aigb_9000_sck/jsp/resource/mybatis-3.5.9/mybatis-3.5.9/mybatis-3.5.9.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/aigb_9000_sck/jsp/resource/mysql-connector-java-8.0.28.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/aigb_0900_kjy/jsp/resource/json-simple-1.1.jar/json-simple-1.1.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
